@@ -1497,7 +1497,7 @@ ping [-c &lt;count&gt;] [-i &lt;interval&gt;] &lt;ip-address&gt;
   Test the network communication with a remote peer.  Example,
 </p>
 <ul><pre>
-nsh&gt; 10.0.0.1
+nsh&gt; ping 10.0.0.1
 PING 10.0.0.1 56 bytes of data
 56 bytes from 10.0.0.1: icmp_seq=1 time=0 ms
 56 bytes from 10.0.0.1: icmp_seq=2 time=0 ms
